--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require-dev": {
         "overtrue/phplint": "^1.1",
         "phpunit/phpunit": "^7",
-        "phpstan/phpstan-shim": "^0.11",
+        "phpstan/phpstan": "*",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "scripts": {
