--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,22 @@
 {
     "name": "selective/audio-type",
-    "type": "library",
     "description": "Audio format detection",
+    "license": "MIT",
+    "type": "library",
     "keywords": [
         "video",
         "type",
         "format"
     ],
     "homepage": "https://github.com/selective-php/audio-type",
-    "license": "MIT",
     "require": {
         "php": "^7.3 || ^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3",
-        "overtrue/phplint": "^2.3",
         "phpstan/phpstan": "^1",
-        "phpunit/phpunit": "^9",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
-    "config": {
-        "sort-packages": true
+        "phpunit/phpunit": "^10",
+        "squizlabs/php_codesniffer": "^3"
     },
     "autoload": {
         "psr-4": {
@@ -32,21 +28,28 @@
             "Selective\\AudioType\\Test\\": "tests/"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
     "scripts": {
-        "check": [
-            "@lint",
-            "@cs:check",
-            "@sniffer:check",
-            "@phpstan",
-            "@test:coverage"
+        "cs:fix": [
+            "@putenv PHP_CS_FIXER_IGNORE_ENV=1",
+            "php-cs-fixer fix --config=.cs.php --ansi --verbose"
         ],
-        "cs:check": "php-cs-fixer fix --dry-run --format=txt --verbose --diff --config=.cs.php",
-        "cs:fix": "php-cs-fixer fix --config=.cs.php",
-        "lint": "phplint ./ --exclude=vendor --no-interaction --no-cache",
-        "phpstan": "phpstan analyse src tests --level=max -c phpstan.neon --no-progress --ansi",
+        "cs:check": [
+            "@putenv PHP_CS_FIXER_IGNORE_ENV=1",
+            "php-cs-fixer fix --dry-run --format=txt --verbose --diff --config=.cs.php --ansi"
+        ],
         "sniffer:check": "phpcs --standard=phpcs.xml",
         "sniffer:fix": "phpcbf --standard=phpcs.xml",
+        "stan": "phpstan analyse -c phpstan.neon --no-progress --ansi",
         "test": "phpunit --configuration phpunit.xml --do-not-cache-result --colors=always",
-        "test:coverage": "phpunit --configuration phpunit.xml --do-not-cache-result --colors=always --coverage-clover build/logs/clover.xml --coverage-html build/coverage"
+        "test:all": [
+            "@cs:check",
+            "@sniffer:check",
+            "@stan",
+            "@test"
+        ],
+        "test:coverage": "php -d xdebug.mode=coverage -r \"require 'vendor/bin/phpunit';\" -- --configuration phpunit.xml --do-not-cache-result --colors=always --coverage-clover build/logs/clover.xml --coverage-html build/coverage"
     }
 }
